/*
 * $Id: ChangeLog,v 1.2435 2004/03/01 09:51:48 vouchcac Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2004-03-01 17:00 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/direct.c
    ! minor optimization on dot checkings.

2004-03-01 15:20 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
  * xharbour/rtl/teditor.prg
    * Optimized to avoid any occurance of recusion.

  * xharbour/debug/tbrwtext.prg
    - Removed Up(), Down(), PageUp(), PageDown(), Left(), Right(), GoTop(), GoBottom() Methods
      in Class TBrwText causing recursion as the same were introduced in TEditor() recently.
    
    /* I am sorry, I could not preceive TEditor() was being used in Debugger as I never use it.
       If TEditor() class is inherited in some other classes let me know.
       Phil and Paul, will you please confirm if my changes are correct!
    */

2004-03-01 04:45 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/achoice.prg
    * if an xSelect array is passed in and it's not the same length as the
    * acItems array, then resize alSelect to match.

2004-03-01 12:20 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * include/hbapifs.h
    % add second parameter to hb_fsDirectoryRecursive( char* , char* ) for
      file mask. We must supply first parameter as "*.*" otherwise directory
      will not be returned.

  * source/rtl/direct.c
    ! DIRECTORYRECURSE() now can return only files match a skleton.
      (Previously, all files were returned )

  + tests/dirtest4.prg
    + test program for filtered DIRECTORYRECURSE()

2004-03-01 09:30 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * include/hbapifs.h
    + PHB_ITEM HB_EXPORT hb_fsDirectoryRecursive( char* ) returns a multi
      dimensional array each of which containing information of file names
      of a given skleton.

  * source/rtl/direct.c