@@ -1,5 +1,5 @@
 /*
- * $Id: hbapifs.h,v 1.30 2004/03/01 02:22:48 andijahja Exp $
+ * $Id: hbapifs.h,v 1.31 2004/03/01 05:16:43 andijahja Exp $
  */
 
 /*
@@ -144,8 +144,8 @@ extern void     HB_EXPORT hb_fsSetError   ( USHORT uiError ); /* set the file sy
 extern USHORT   HB_EXPORT hb_fsWrite      ( FHANDLE hFileHandle, BYTE * pBuff, USHORT ulCount ); /* write to an open file from a buffer (<=64K) */
 extern ULONG    HB_EXPORT hb_fsWriteLarge ( FHANDLE hFileHandle, BYTE * pBuff, ULONG ulCount ); /* write to an open file from a buffer (>64K) */
 extern FHANDLE  HB_EXPORT hb_fsPOpen( BYTE * pFilename, BYTE * pMode );
-extern PHB_ITEM HB_EXPORT hb_fsDirectory( char* szSkleton, char* szAttributes, BOOL bDirOnly, BOOL bFullPath );
-extern PHB_ITEM HB_EXPORT hb_fsDirectoryRecursive( char* szSkleton, char* szFName );
+extern void     HB_EXPORT hb_fsDirectory( PHB_ITEM Dir, char* szSkleton, char* szAttributes, BOOL bDirOnly, BOOL bFullPath );
+extern void     HB_EXPORT hb_fsDirectoryRecursive( PHB_ITEM Dir, char* szSkleton, char* szFName );
 
 /* Open a child process */
 extern FHANDLE HB_EXPORT hb_fsOpenProcess( char *pFilename, FHANDLE *fhStdin, FHANDLE *fhStdout, FHANDLE *fhStderr, BOOL bBackground );
